[package]
name = "naradamuni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-prom = "0.6.0"
lazy_static = "1.4.0"
prometheus = "0.13.3"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = "1.28.1"
